News.css
:root {
  --light-purple: #BFA0EB;
  --medium-light-purple: #9754CB;
  --medium-dark-purple: #6237A0;
  --dark-purple: #28104E;
  --very-light-purple: #F7EBFF;
  --very-dark-purple: #53156B;
  --link-blue: #75D0FA;
}

.hide-scroll::-webkit-scrollbar {
  display: none;
}

body {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
  background: var(--very-light-purple);
  font-family: "Oxygen", sans-serif;
  overflow: hidden;
}

#title {
  margin-left: 5vw;
  font-size: 50px;
  margin-top: 2vh;
  margin-bottom: 2vh;
  color: var(--very-dark-purple);
  z-index: 2;
}

#main {
  overflow-y: auto;
  height: calc(100vh - 100px);
  overflow-x: clip;
}

#News {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 100px);
}

#blocks {
  position: relative;
  padding-top: 0;
  padding-bottom: 0;
  display: flex;
  flex-direction: row;
  overflow-x: scroll;
  gap: 20px;
  width: calc(100vw - 580px);
  height: calc(88vh - 100px);
  padding-left: 110px;
  padding-right: 110px;
  margin-bottom: 0;
}

.block {
  background-color: var(--medium-dark-purple);
  width: calc(81vh - 100px);
  height: calc(81vh - 100px);
  max-height: 520px;
  max-width: 520px;
  border-radius: min(10vh, 70px);
  display: flex;
  flex-direction: column;
  aspect-ratio: 1/1;
}

.category {
  color: var(--link-blue);
  font-size: min(3vh, 20px);
  margin-left: 5vh;
  margin-top: 3vh;
  text-decoration: none;
}

.header {
  padding-left: 33px;
  padding-right: 33px;
  color: white;
  margin: auto;
  margin-top: 2vh;
  margin-bottom: 2vh;
  font-size: min(4vh, 32px);
}

.news-content {
  color: white;
  padding-left: 3vh;
  padding-right: 3vh;
  font-size: min(3vh, 22px);
  margin: 0;
}

.news-content a {
  color: var(--link-blue);
}

news-content a:visited {
  color: var(--link-blue);
}

.news-content a:hover {
  color: var(--light-purple);
}

#fade-left {
  position: absolute;
  left: 0;
  top: 50px;
  z-index: 1;
  background-image: linear-gradient(to right, rgba(247,235,255,0.7), rgba(223,186,245,0)); 
  width: 130px;
  height: 700px;
  max-height: calc(100vh - 100px);
}

#fade-right {
  position: absolute;
  right: 360px;
  top: 50px;
  z-index: 1;
  background-image: linear-gradient(to left, rgba(247,235,255,0.7), rgba(223,186,245,0)); 
  width: 130px;
  height: 700px;
  max-height: calc(100vh - 100px);
}

#archive-pull {
  background-color: var(--medium-dark-purple);
  position: fixed;
  top: 50px;
  right: 340px;
  width: 20px;
  height: calc(100vh - 100px);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;
  cursor: pointer;
}

#pull {
  color: white;
}

#archive {
  background-color: var(--medium-light-purple);
  position: fixed;
  top: 50px;
  right: 0;
  width: 350px;
  height: calc(100vh - 100px);
  display: flex;
  flex-direction: column;
}

#archive-title {
  margin-left: 30px;
  color: white;
}

#archive-blocks {
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
  margin-left: 30px;
  height: calc(100vh - 180px);
  gap: 12px;
  padding-top: 50px;
  padding-bottom: 40px;
}

.archive-block {
  background-color: var(--medium-dark-purple);
  min-width: 300px;
  width: 300px;
  aspect-ratio: 1/1;
  border-radius: 40px;
  display: flex;
  flex-direction: column;
}

.archive-category {
  color: var(--link-blue);
  font-size: 13px;
  margin-left: 22px;
  margin-top: 15px;
  text-decoration: none;
}

.archive-header {
  padding-left: 20px;
  padding-right: 20px;
  color: white;
  margin: auto;
  margin-top: 10px;
  margin-bottom: 0;
}

.archive-news-content {
  color: white;
  padding-left: 15px;
  padding-right: 15px;
}

.archive-news-content a {
   color: --link-blue;
}

.archive-news-content a:visited {
  color: var(--link-blue);
}

.archive-news-content a:hover {
  color: var(--light-purple);
}

.fade-top {
  position: absolute;
  top: 83px;
  margin-left: 30px;
  z-index: 1;
  background-image: linear-gradient(to bottom, rgba(151,84,203,0.7), rgba(151,84,203,0)); 
  width: 306px;
  height: 80px;
}

.fade-bottom {
  position: absolute;
  bottom: 0;
  margin-left: 30px;
  z-index: 1;
  background-image: linear-gradient(to top, rgba(151,84,203,0.7), rgba(151,84,203,0)); 
  width: 306px;
  height: 80px;
}

@media (max-width: 600px) {
  #archive, #archive-pull {
    display: none !important;
  }
  #fade-right, #fade-left {
    display: none;
  }
  #News {
    overflow-x: clip;
  }
  #blocks {
    flex-direction: column;
    height: auto;
    padding-left: 0;
    width: 100vw !important;
    margin-left: 5vw;
    margin-right: 5vw;
    padding-bottom: 70px;
  }
  .block {
    min-width: 90vw;
    min-height: 90vw;
    width: 90vw;
    height: 90vw;
    border-radius: 18vw;
  }
  .category {
    font-size: 4vw;
  }
  .header {
    font-size: 6vw;
  }
  .news-content {
    font-size: 5vw;
  }
}

